--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,11 +8,17 @@ body {
   place-items: center;
 }
 
+main {
+  background: url(../images/background.svg);
+  width: 375px;
+  height: 812px;
+}
+
 h1 {
   font-size: 1.5rem;
 }
 
 a {
-  color: lightgray;
+  color: black;
   text-decoration: none;
 }
