--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,15 @@
+* {
+  margin: 0;
+}
+
 html,
 body {
+  --grey: hsl(240, 9%, 89%);
+  --black: hsl(240, 6%, 13%);
+
   height: 100%;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -9,16 +18,64 @@ body {
 }
 
 main {
-  background: url(../images/background.svg);
+  background: url(../images/background.png);
   width: 375px;
   height: 812px;
 }
 
+.container {
+  max-width: 250px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+
+  color: var(--grey);
+}
+
+.avatar {
+  width: 10rem;
+  margin: 11.5rem auto 0;
+
+  position: relative;
+}
+
+.avatar span {
+  position: absolute;
+  top: -15px;
+  z-index: 1;
+}
+
+.avatar > img {
+  width: 10rem;
+  object-fit: cover; /*Serve para ajustar a imagem ao tamanho que foi atribuído a ela*/
+
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+}
+
 h1 {
   font-size: 1.5rem;
+
+  margin-top: 1.5rem;
 }
 
 a {
-  color: black;
   text-decoration: none;
+
+  margin-top: 0.25rem;
+  color: var(--grey);
+}
+
+p {
+  margin-top: 2rem;
+}
+
+ul {
+  margin-top: 4rem;
+  list-style: none;
+  padding: 0;
+
+  display: flex;
+  gap: 0.5rem;
+
+  justify-content: center;
 }
